# datamil

./: .gitignore  LICENSE  README.md  pyproject.toml
datamil/: __init__.py  eval_libero_parallel.py  eval_metaworld.py  mw_viz_selected_data.py
datamil/data/: dataset.py
datamil/metagradients/: do_libero_data_selection_parallel.py  do_mw_data_selection_parallel.py  flags_config.py  make_libero_loader_mds.py  make_mw_loader_mds.py
datamil/metagradients/core/: dataloading.py  dlpack.py  utils.py  vjp.py  vjp_blocks.py  vjp_robodm.py
datamil/metagradients/core/optimizers/: __init__.py  adam.py  interpolation.py  schedules.py  sgd.py
datamil/models/: make_octo_model.py  mw_model_jax.py  octo_action_head.py
datamil/utils/: load_dm.py
rlds_utils/: README.md  generate_dataset_statistics.py  val_datagen_script.sh
rlds_utils/rlds_dataset_builders/libero90/: libero90.py
rlds_utils/rlds_dataset_builders/libero90_horizon/: libero90_horizon.py
rlds_utils/rlds_dataset_builders/libero_val/: libero_val.py
scripts/: cotraining.py  libero_rlds_to_mds.py  mw_h5_to_mds.py  perform_libero_dm.sh  perform_metaworld_dm.sh  selected_cotrain_libero.sh  selected_training_mw.py
scripts/configs/: cotrain_libero_config.py  dm_libero_config.py  dm_metaworld_config.py
